[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.14", features = [
  "macos-private-api",
  "devtools",
] }
tauri-plugin-os = "2.0.0-alpha.2"
tauri-plugin-app = "2.0.0-alpha.2"
tauri-plugin-window = "2.0.0-alpha.2"
tauri-plugin-tokyo = { path = "../../packages/tauri-plugin-tokyo" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokyo-proto = { path = "../../packages/proto", features = ["protoc"] }
tokyo-files = { path = "../../packages/files" }
tokyo-db = { path = "../../packages/db" }
window-vibrancy = "0.4.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
