[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "os-all",
  "macos-private-api",
  "window-start-dragging",
  "window-close",
  "window-show",
  "window-unmaximize",
  "window-maximize",
  "window-minimize",
  "window-unminimize",
  "window-hide",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phl-proto = { path = "../../packages/phl-proto" }
phl-library = { path = "../../packages/phl-library" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
